# GizaAutoML

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
GSAutoML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GSAutoML/GSAutoML/: auto_series_forecaster.py  auto_series_regressor.py
GSAutoML/configuration_manager/: configuration_manager.py  configuration_manager_base.py
GSAutoML/controller/: GSAutoML_Experiments_controller.py  automl_controller.py  base_line_model_controller.py  forecasting_controller.py  meta_features_controller.py  meta_model_controller_old.py  statistical_controller.py
GSAutoML/data_modeling/: classifiers.py  evaluator.py  regressors.py
GSAutoML/data_resampler/: data_constructor.py  multivariate_resampler.py  resampler.py  resampler_interface.py  univariate_resampler.py
GSAutoML/enums/: ML_tasks_enum.py  aggregations_enums.py  algorithms_mapping.py  autosklearn_evaluation_metric.py  classification_evaluation_metric_enum.py  dataset_types_enums.py  intervals_enum.py  regression_algorithms_enum.py  regression_grid_search_scoring_enum.py  stages_enum.py  time_series_types_enum.py
GSAutoML/meta_feature_extraction/: meta_feature_extractor.py  meta_feature_extractor_interface.py  meta_feature_extractor_multivariate.py  meta_feature_extractor_univariate.py  time_series_features_extractor.py
GSAutoML/meta_model/: algorithms_recommender_1NN.py  meta_model.pkl  top_algorithms.py  (+1 more)
GizaAutoML/: auto_series_forecaster.py
GizaAutoML.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: meta_features.csv
(+148 files in other folders)
